tests/fixtures/LatestTests/ObjectTests/errors/invalid_field_type.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: "thirty"
}

